# gaia-simpleeval

./: .gitignore  Cargo.toml  LIMITATIONS.md  README.md  gaia_simpleeval.pth  pyproject.toml
benchmarks/: bench_simple_eval.py
gaia_simpleeval/: __init__.py  _patch.py
src/: lib.rs
src/tests/: builtins_tests.rs  evaluator_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs
tests/: conftest.py  test_errors.py  test_fallback.py  test_fast_path.py  test_parity.py  test_security.py  test_types.py
